fix outline on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -243,12 +243,6 @@ button:focus{
     line-height: normal;
 }
 
-@media (hover: none) {
-    .theme:hover {
-        background-color: initial; 
-    }
-}
-
 
   
   
