--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,6 +5,15 @@
         padding: 0px 16px;
     }
 
+    /*theme*/
+    .theme:hover {
+        background-color: initial; 
+    }
+
+    .theme:focus{
+        outline: none !important;
+    }
+    
     /* Contents */
     .photograph{
         padding: 32px 0px 32px 0px;
